Updated tyhe content of HOME-view to have update and delete button
also updated the new logic of HomeController.java to accomodate the new changes in the HOME-view.fxml

Created a new form-view.fxml that will be useful for updating/inserting(to be done) information to the database

added a formController.java to contain the logic of the nw form-view.fxml file